refactor: polymer usage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,12 @@
     "module": "esnext",
     "target": "es6",
     "lib": ["dom", "esnext"],
-    "outDir": "./dist",
+    "skipLibCheck": true,
     "strictNullChecks": true,
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
-    "moduleResolution": "node",
-    "sourceMap": true
+    "moduleResolution": "node"
   }
 }
